--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ height:400px !important;
 }
 
 
+
 .slide {
   opacity: 0;
   background-position: center center;
@@ -19,15 +20,15 @@ height:400px !important;
   z-index: 1;
   display: none;
   width:400px;
-  height: 500px;
+  height: 450px; 
+  position: relative;
 }
 
 .slide.active {
   opacity: 1;
   display: block;
   width:400px;
-  height: 500px;
-  
+  height: 450px;
 }
 
 .arrow {
@@ -38,19 +39,14 @@ height:400px !important;
   transform: translateY(-50%);
   cursor: pointer;
   margin-top:50px;
+  float: right;
 }
 
 .arrow:focus {
   outline: 0;
 }
 
-.left-arrow {
-  left: calc(15vw - 65px);
-}
 
-.right-arrow {
-  right: calc(15vw - 65px);
-}
 
 @media only screen and(max-width: 350px)  {
   .product-image{
