--- a/style.css
+++ b/style.css
@@ -11,7 +11,10 @@ width:100% !important;
 height:400px !important;
 }
 
-
+.farm-image{
+  width:50% ;
+  height:400px ;
+  }
 
 .slide {
   opacity: 0;
