--- a/style.css
+++ b/style.css
@@ -22,15 +22,15 @@ height:400px !important;
   transition: 0.8s ease;
   z-index: 1;
   display: none;
-  width:400px;
-  height: 450px; 
+  width:100%;
+  height: 400px; 
   position: relative;
 }
 .slide.active {
   opacity: 1;
   display: block;
-  width:400px;
-  height: 450px;
+  width:100%;
+  height: 400px;
 }
 
 .slide-planifolia {
@@ -39,27 +39,27 @@ height:400px !important;
   transition: 0.8s ease;
   z-index: 1;
   display: none;
-  width:400px;
-  height: 450px; 
+  width:100%;
+  height: 400px; 
   position: relative;
 }
 
 .slide-planifolia.active {
   opacity: 1;
   display: block;
-  width:400px;
-  height: 450px;
+  width:100%;
+  height: 400px;
 }
 
 
 .arrow {
   background-color: transparent;
-  padding: 20px;
+  padding: 10px;
   font-size: 30px;
   border: 2px solid orange;
   transform: translateY(-50%);
   cursor: pointer;
-  margin-top:50px;
+  margin-top:40px;
   float: right;
 }
 
