--- a/style.css
+++ b/style.css
@@ -33,6 +33,8 @@ height:400px !important;
   height: 400px;
 }
 
+
+
 .slide-planifolia {
   opacity: 0;
   background-position: center center;
@@ -51,6 +53,23 @@ height:400px !important;
   height: 400px;
 }
 
+.slide-tahitian {
+  opacity: 0;
+  background-position: center center;
+  transition: 0.8s ease;
+  z-index: 1;
+  display: none;
+  width:100%;
+  height: 400px; 
+  position: relative;
+}
+
+.slide-tahitian.active {
+  opacity: 1;
+  display: block;
+  width:100%;
+  height: 400px;
+}
 
 .arrow {
   background-color: transparent;
